@@ -1,4 +1,6 @@
 {{$NEXT}}
+   - Add construct() helper methods to PDF::Action::GoTo and
+     PDF::Action::GoToR, and PDF::Action::URI methods
 
 0.5.4  2022-06-09T14:33:45+12:00
    - Fix PDF::Field coerce-field() for compatibility with FDF::Field (FDF module)
